[gd_scene load_steps=7 format=3 uid="uid://bf52oynd82mjc"]

[ext_resource type="Script" uid="uid://rno2m0jccfhc" path="res://Scripts/options.gd" id="1_4tmxy"]
[ext_resource type="Theme" uid="uid://c4yyml5ejheaf" path="res://Assets/Themes/options.tres" id="1_prnvy"]
[ext_resource type="AudioStream" uid="uid://qhqvxvx2oo56" path="res://Assets/OST/CRAZY NOISY BIZARRE TOWN.mp3" id="3_qyyw6"]

[sub_resource type="Animation" id="Animation_qyyw6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(415.99997, 612)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_prnvy"]
resource_name = "play"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(415.99997, 612), Vector2(415.99997, 513), Vector2(415.99997, 513)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4tmxy"]
_data = {
&"RESET": SubResource("Animation_qyyw6"),
&"play": SubResource("Animation_prnvy")
}

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4tmxy")

[node name="BGColor" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.28432503, 0.43847188, 0.52845484, 1)

[node name="Options" type="Label" parent="."]
layout_mode = 0
offset_right = 3968.0964
offset_bottom = 404.2452
scale = Vector2(0.29031554, 0.2622171)
theme = ExtResource("1_prnvy")
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Save" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -244.0
offset_top = -63.0
offset_right = 1037.8306
offset_bottom = 236.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.1750396, 0.1750396)
theme = ExtResource("1_prnvy")
text = "Apply"

[node name="Return" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1133.0
offset_top = -605.0
offset_right = 148.83057
offset_bottom = -306.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.1750396, 0.1750396)
theme = ExtResource("1_prnvy")
text = "Return"

[node name="SettingsApplied" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 415.99997
offset_top = 612.0
offset_right = 2353.0
offset_bottom = 940.0
scale = Vector2(0.19495168, 0.19495168)
theme = ExtResource("1_prnvy")
text = "Settings Applied!"

[node name="AnimationPlayer" type="AnimationPlayer" parent="SettingsApplied"]
libraries = {
&"": SubResource("AnimationLibrary_4tmxy")
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_top = 179.0
offset_right = 1806.0
offset_bottom = 470.0
scale = Vector2(0.19443507, 0.19443507)
theme_override_constants/separation = 154

[node name="Fullscreen" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_prnvy")
text = "Fullscreen mode:"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/Fullscreen"]
layout_mode = 0
offset_left = 1911.0253
offset_top = 52.64919
offset_right = 3247.0254
offset_bottom = 343.6492
scale = Vector2(0.8504566, 0.8504566)
theme = ExtResource("1_prnvy")
selected = 0
item_count = 3
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Fullscreen"
popup/item_1/id = 1
popup/item_2/text = "Borderless"
popup/item_2/id = 2

[node name="Volume" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_prnvy")
text = "Fullscreen mode:"

[node name="HSlider" type="HSlider" parent="VBoxContainer/Volume"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 1913.2351
offset_top = 120.741486
offset_right = 2113.235
offset_bottom = 136.74149
scale = Vector2(6.2929244, 6.2929244)
value = 50.0

[node name="Vol" type="Label" parent="VBoxContainer/Volume"]
layout_mode = 0
offset_left = 2448.1177
offset_top = -74.69651
offset_right = 2716.1177
offset_bottom = 216.3035
scale = Vector2(0.7061256, 0.7061256)
text = "50"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_qyyw6")
volume_db = -25.333
autoplay = true

[connection signal="pressed" from="Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Return" to="." method="_on_return_pressed"]
[connection signal="item_selected" from="VBoxContainer/Fullscreen/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="value_changed" from="VBoxContainer/Volume/HSlider" to="." method="_on_h_slider_value_changed"]
